--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.2",
+    "abcjs": "^6.4.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.13.0",
     "lucide-react": "^0.406.0",
     "next": "14.2.4",
     "react": "^18",
+    "react-abc": "^0.4.0",
     "react-dom": "^18",
+    "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
