--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.13.0",
+    "framer-motion": "^11.3.2",
+    "getusermedia": "^2.0.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.406.0",
     "next": "14.2.4",
+    "patch-package": "^8.0.0",
+    "pitch-detect": "^0.0.2",
+    "pitchfinder": "^2.3.2",
     "react": "^18",
-    "react-abc": "^0.4.0",
     "react-dom": "^18",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
