--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.406.0",
     "next": "14.2.4",
-    "patch-package": "^8.0.0",
-    "pitch-detect": "^0.0.2",
-    "pitchfinder": "^2.3.2",
     "react": "^18",
     "react-dom": "^18",
+    "stripe": "^16.2.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
