--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "tone": "^15.0.4",
     "xml2abc": "^1.68.3"
   },
   "devDependencies": {
