--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "framer-motion": "^11.3.2",
     "getusermedia": "^2.0.1",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.406.0",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-icons": "^5.2.1",
     "stripe": "^16.2.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
