--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-icons": "^5.2.1",
+    "react-moveable": "^0.56.0",
     "stripe": "^16.2.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
