--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "rctx-contextmenu": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
