--- a/package.json
+++ b/package.json
@@ -10,35 +10,31 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
-    "@magenta/music": "^1.23.1",
-    "@tabler/icons-react": "^3.11.0",
+    "@ducanh2912/next-pwa": "^10.2.8",
     "abcjs": "6.4.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "convex": "^1.13.0",
-    "fast-xml-parser": "^4.4.0",
     "framer-motion": "^11.3.2",
-    "getusermedia": "^2.0.1",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
-    "lodash": "^4.17.21",
     "next": "14.2.4",
+    "next-intl": "^3.17.1",
+    "next-themes": "^0.3.0",
+    "punycode": "^2.3.1",
     "rctx-contextmenu": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
-    "react-icons": "^5.2.1",
-    "react-moveable": "^0.56.0",
+    "react-markdown": "^9.0.1",
     "stripe": "^16.2.0",
     "svix": "^1.24.0",
     "tailwind-merge": "^2.4.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tone": "14.7.58"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/jquery": "^3.5.30",
-    "@types/lodash": "^4.17.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
